# CAN-bus-sim

./: .gitignore  CMakeLists.txt  FoodRating.cpp  README.md  build.bat  build.ps1  cpp20-test.code-workspace  readme  testcpp20.sln
CANSimulation/: AdaptiveCruiseControl.ixx  CANBusDemo.ixx  CANBusSimulation.ixx  CANSimulation.cpp  CANSimulation.vcxproj  CANSimulation.vcxproj.filters  HeadlightControl.ixx
CMake/: CMakeLists.txt
pythonLeetCode/: Avoid_Flood_in_The_City.py  Q2.ipynb
testcpp20/: AtomicM.ixx  CANBusDemo.ixx  ConstTest.ixx  CoroutineTest.ixx  FoodRating.cpp  GreedyActivity.ixx  Main.cpp  OldTestAndTemplate.ixx  Rectangle.cpp  Rectangle.h  STDExecution.ixx  SemaphoreTest.ixx  TestCalssInModule.cpp  TestCalssInModule.h  TestModule.ixx  TestModuleInCpp.cppm  TestModules.ixx  TestTuple.cpp  TestTuple.h  VariantTest.ixx  compare_3_way.ixx  parentModule.ixx  testcpp20.vcxproj  testcpp20.vcxproj.filters
